--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-allauth==65.0.2
 django-allauth-themes==0.1.2
 django-browser-reload==1.15.0
 django-grappelli==4.0.1
+django-jazzmin==3.0.1
 idna==3.10
 pycparser==2.22
 PyJWT==2.9.0
