--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,40 @@
-# Python
-*.pyc
-*~
-__pycache__
-
-# Env
 .env
-myvenv/
+*.pyc
+build/
+dist/
+htmlcov/
+MANIFEST
+.*.swp
+*.egg-info
+.idea/
+coverage.xml
+docs/_build
+.coverage*
+.python-version
+.tox
+.venv/
 venv/
-
-# Database
+run-local.sh
 db.sqlite3
+junitxml_report/report.xml
+notebooks/.ipynb_checkpoints/*
+static/grappelli/
+static/grappeli/*
+static/
+notebooks
 
-# Static folder at project root
-/static/
+# Include tracked hidden files and directories in search and diff tools
+!.dockerignore
+!.github/
+!.gitignore
+!.gitlab-ci.yml
+!.mypy.ini
+!.pre-commit-config.yaml
+!.readthedocs.yml
+!.renovaterc.json
+!.coveragerc
 
-# macOS
-._*
-.DS_Store
-.fseventsd
-.Spotlight-V100
-
-# Windows
-Thumbs.db*
-ehthumbs*.db
-[Dd]esktop.ini
-$RECYCLE.BIN/
-
-# Visual Studio
-.vscode/
-.history/
-*.code-workspace
-
-/.idea
+gcloud_creds.json
+env.sh
+.testmondata
+.mise.toml
