--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ Django==5.1.1
 django-allauth==65.0.2
 django-allauth-themes==0.1.2
 django-browser-reload==1.15.0
+django-debug-toolbar==4.4.6
 django-grappelli==4.0.1
 django-jazzmin==3.0.1
 idna==3.10
+psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
 python-dotenv==1.0.1
