feat: redesign of the project

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-allauth==65.0.2
 django-allauth-themes==0.1.2
 django-browser-reload==1.15.0
 django-debug-toolbar==4.4.6
+django-extensions==3.2.3
 django-grappelli==4.0.1
 django-jazzmin==3.0.1
 idna==3.10
