--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ asgiref==3.8.1
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
+click==8.1.8
 cryptography==43.0.1
-Django==5.1.4
+Django==5.1.1
 django-allauth==65.0.2
 django-allauth-themes==0.1.2
 django-browser-reload==1.15.0
@@ -11,7 +12,10 @@ django-debug-toolbar==4.4.6
 django-extensions==3.2.3
 django-grappelli==4.0.1
 django-jazzmin==3.0.1
+gunicorn==23.0.0
+h11==0.14.0
 idna==3.10
+packaging==24.2
 psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
@@ -19,4 +23,5 @@ python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.1
 urllib3==2.2.3
+uvicorn==0.34.0
 whitenoise==6.8.2
