--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,14 @@ charset-normalizer==3.3.2
 click==8.1.8
 cryptography==43.0.1
 deprecation==2.1.0
-Django==5.1.5
+Django==5.1.4
 django-allauth==65.0.2
 django-allauth-themes==0.1.2
 django-browser-reload==1.15.0
 django-debug-toolbar==4.4.6
 django-extensions==3.2.3
+django-meta==2.4.2
+django-pwa==2.0.1
 frozenlist==1.5.0
 gotrue==2.11.1
 gunicorn==23.0.0
