fix: add grapelli

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,21 +5,26 @@ annotated-types==0.7.0
 anyio==4.7.0
 asgiref==3.8.1
 attrs==24.3.0
+black==24.10.0
 Brotli==1.1.0
 certifi==2024.8.30
 cffi==1.17.1
+cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.8
 cryptography==43.0.1
 deprecation==2.1.0
+distlib==0.3.9
 Django==5.1.5
 django-allauth==65.0.2
 django-allauth-themes==0.1.2
 django-browser-reload==1.15.0
 django-debug-toolbar==4.4.6
 django-extensions==3.2.3
+django-grappelli==4.0.1
 django-meta==2.4.2
 django-pwa==2.0.1
+filelock==3.17.0
 frozenlist==1.5.0
 gotrue==2.11.1
 gunicorn==23.0.0
@@ -29,10 +34,16 @@ hpack==4.0.0
 httpcore==1.0.7
 httpx==0.27.2
 hyperframe==6.0.1
+identify==2.6.6
 idna==3.10
 multidict==6.1.0
+mypy-extensions==1.0.0
+nodeenv==1.9.1
 packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
 postgrest==0.19.1
+pre_commit==4.1.0
 propcache==0.2.1
 psycopg2==2.9.10
 pycparser==2.22
@@ -41,6 +52,7 @@ pydantic_core==2.27.2
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+PyYAML==6.0.2
 realtime==2.1.0
 requests==2.32.3
 six==1.17.0
@@ -53,6 +65,7 @@ supafunc==0.9.0
 typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.34.0
+virtualenv==20.29.1
 websockets==13.1
 whitenoise==6.8.2
 yarl==1.18.3
