--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.7.0
 asgiref==3.8.1
+asttokens==3.0.0
 attrs==24.3.0
 black==24.10.0
 Brotli==1.1.0
@@ -13,6 +14,7 @@ cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.8
 cryptography==43.0.1
+decorator==5.1.1
 deprecation==2.1.0
 distlib==0.3.9
 Django==5.1.5
@@ -24,6 +26,8 @@ django-extensions==3.2.3
 django-grappelli==4.0.1
 django-meta==2.4.2
 django-pwa==2.0.1
+django-watson==1.6.3
+executing==2.2.0
 filelock==3.17.0
 frozenlist==1.5.0
 gotrue==2.11.1
@@ -36,19 +40,28 @@ httpx==0.27.2
 hyperframe==6.0.1
 identify==2.6.6
 idna==3.10
+ipython==8.32.0
+jedi==0.19.2
+matplotlib-inline==0.1.7
 multidict==6.1.0
 mypy-extensions==1.0.0
 nodeenv==1.9.1
 packaging==24.2
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
 platformdirs==4.3.6
 postgrest==0.19.1
 pre_commit==4.1.0
+prompt_toolkit==3.0.50
 propcache==0.2.1
 psycopg2==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pycparser==2.22
 pydantic==2.10.4
 pydantic_core==2.27.2
+Pygments==2.19.1
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -58,14 +71,17 @@ requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.1
+stack-data==0.6.3
 storage3==0.11.0
 StrEnum==0.4.15
 supabase==2.11.0
 supafunc==0.9.0
+traitlets==5.14.3
 typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.34.0
 virtualenv==20.29.1
+wcwidth==0.2.13
 websockets==13.1
 whitenoise==6.8.2
 yarl==1.18.3
